phase2_Dev/src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>ActiveVersionName__c</fullName>
        <formula>ActiveVersion__r.Name</formula>
        <label>Active Version Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Version</label>
        <referenceTo>FormVersion__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UUID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>